# mars_rover

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker.yaml  pytest.yaml
src/mars_rover/: __main__.py  cli.py  entities.py  enums.py  utils.py
src/tests/: test_entities.py  test_enums.py  test_integration.py  test_package.py
