[tool.poetry]
name = "mars-rover"
version = "0.1.0"
description = "Mars Rover"
authors = ["Nahuel Defosse <nahuel.defosse@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-subtests = "^0.8.0"
pdbpp = "^0.10.3"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
ipython = "^8.5.0"
black = "^22.8.0"
typing-extensions = "^4.3.0"

[tool.poetry.scripts]
mars_rover = "mars_rover.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
